# lk-project

./: .gitignore  Dockerfile.dbt  pyproject.toml
airflow/: docker-compose.yaml
airflow/dags/: dag_uber_ads_campaign.py  dag_uber_customer_retention.py  dag_uber_remaining_ads_credits.py  test_dag_connexion_gcp.py
airflow/scripts_scraping/: __init__.py  uber_ads_by_day_by_restaurant.py  uber_ads_campaign.py  uber_customer_retention.py  uber_menu_weekly_rate_conversion.py  uber_promotion_daily_statistics&uber_promotions_campaigns.py  uber_remaining_ads_credits.py
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/models/bronze/: brz_customer_table.sql  brz_deliveroo_weekly_rate_conversion.sql  brz_uber_menu_weekly_rate_conversion.sql  schema.yml
dbt/models/gold/: gld_global_conversion_rate.sql  gld_weekly_conversion_rate.sql  schema.yml
dbt/models/silver/: schema.yml  slv_all_platform_conversion_rate.sql
dbt/models/sources/: uber.yml
ingestion/: uber_ads_by_day_by_restaurant.py  uber_ads_campaign.py  uber_customer_retention.py  uber_menu_weekly_rate_conversion.py  uber_promotion_daily_statistics&uber_promotions_campaigns.py  uber_remaining_ads_credits.py
lk_project/: __init__.py
